--- a/internship_test_reactjs/src/App.css
+++ b/internship_test_reactjs/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.body-container {
+  padding: 1.4rem;
+  font-size: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-container {
   display: flex;
-  flex-direction: column;
+  gap: 20%;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 770px) {
+  .header-container {
+    flex-wrap: wrap;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.header-righ-side {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-body-container {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+@media only screen and (max-width: 770px) {
+  .main-body-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .main-body-container .main-left-side-container {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-body-container .main-right-side-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
