--- a/internship_test_reactjs/src/App.css
+++ b/internship_test_reactjs/src/App.css
@@ -33,6 +33,7 @@
   .main-body-container {
     flex-wrap: wrap;
     justify-content: center;
+    border-bottom: none;
   }
 
   .main-body-container .main-left-side-container {
@@ -46,5 +47,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border: none;
   }
 }
